fix: improve Profile page layout on mobile for better responsiveness

--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -35,6 +35,7 @@
   padding: 1rem;
   border-radius: 10px;
   color: #7f170e;
+  margin-bottom: 3rem;
 }
 
 .edit:hover {
@@ -80,12 +81,14 @@
   color: white;
   background-color: #7f170e;
   border: none;
+  margin-bottom: 3rem;
 }
 
 .cancel {
   color: #7f170e;
   background-color: white;
   border: 2px solid #7f170e;
+  margin-bottom: 3rem;
 }
 
 .cancel:hover {
@@ -120,14 +123,8 @@
   font-weight: 700;
 }
 
-@media (max-width: 815px) {
-  .edit-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .profile-container {
-    margin-bottom: 40vh;
-  }
+.edit-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
